assets/css/style.css
*{
    margin: 0;
    padding: 0;
    border: none;
    }

body {
    background-color:white;
}

footer{
    background-color: green;
    height: 190px;
}

.intro{
    padding-left: 250px;
    padding-right: 250px;
    letter-spacing: 2px;
}
/*header*/

h2 {
    text-align: center;
    border-bottom: 1px solid;
}

header {
    height: 75px;
    background-color: green;
}

#name{
    float: left;
    font-size: 300%;       
    line-height: 75px;   
    color: white;   
}

#tabs{
    font-size: 150%;
    letter-spacing: 5px;
    line-height: 75px;    
}

#tabs li{
    float: right;
    list-style-type: none;
    margin-right: 35px;
    
}

#tabs a{
text-decoration: none;
color: white;
}

#tabs a:hover{
    border-bottom: 2px solid white;    
}


#hero-image{
    height: 400px;
    width: 100%;    
    background: url('../images/header.jpg') no-repeat center center;      
}

/* home body page */

h1{
    text-align: center;
}

.container{
    display: flex;     
    
}

.container h3, .container h3{
    text-align: center;
    font-size: 150%;
    letter-spacing: 3px;
    border-bottom: 5px solid black;
}
.container div, .container div{
    border: solid 1px black;    
    flex: 1;
    margin: 1em;
    box-shadow: 0px 0px 10px 0px;   
}

.box-1{
    width: 33%;
}

.box-1 > p{
    color: grey;
    border: 1px solid black;
    margin: 1em;
    text-align: center;
    letter-spacing: 2px;    
}

.box-1-image{
    width: 100%; 
    height: 400px;
    object-fit:scale-down;    
    }    

.box-2-image{
    width: 100%; 
    height: 400px;  
    object-fit:scale-down;       
}

.box-2{
    width: 25%;     
}

.box-2 > p{
    color: grey;
    border: 1px solid black;
    margin: 1em;
    text-align: center;
    letter-spacing: 2px;
    }

/*Fish Tab*/

.container-fish-1{
    display: flex;
}

.container-fish-1 h2, .container-fish-2 h2, .container-fish-3 h2{
    text-align: center;
    font-size: 150%;
    letter-spacing: 3px;
    border-bottom: 5px solid black;
}

.box-fish {
    width: 33%;
}
.container-fish-1 div {
    border: solid 1px black;    
    flex: 1;
    margin: 1em;
    box-shadow: 0px 0px 10px 0px;   
}
.container-fish-2{
    display: flex;
}

.container-fish-2 div {
    border: solid 1px black;    
    flex: 1;
    margin: 1em;
    box-shadow: 0px 0px 10px 0px;   
}

.container-fish-3{
    display: flex;
}

.container-fish-3 div {
    border: solid 1px black;    
    flex: 1;
    margin: 1em;
    box-shadow: 0px 0px 10px 0px;   
}

.fish-image{
    width: 100%;
    height: 300px;      
}

table, th, td {
    border: 1px solid black;
    table-layout: fixed;
    width: 100%;
    text-align: center;    
  }

/*plant tab*/
h3{
    text-align: center;
}

.container-plant-1{
    display: flex;
}

.container-plant-1 div {
    border: solid 1px black;    
    flex: 1;
    margin: 1em;
    box-shadow: 0px 0px 10px 0px;   
}

.container-plant-1 h2 {
    text-align: center;
    font-size: 150%;
    letter-spacing: 3px;
    border-bottom: 5px solid black;
}
.plant-image{
    width: 400px; 
    height: 400px;
    object-fit:scale-down;
}

/*footer*/

#social-links{
    text-align: center;    
}

#social-links > li{
    display: inline;     
}

#social-links  i{
    font-size: 200%;    
    color: white;
    padding-right: 7%;
    line-height: 100px;   
}

#Sign-up{
    float: left;
}

input {
    border: 2px solid black;
    padding-bottom: 2%;
}

#button{
    background-color: white;
    border: 2px solid black;
    color: black;    
    text-align: center;
    text-decoration: none;    
    padding: 10px 28px;
    margin-top: 5px;
    font-size: 10px;    
    cursor: pointer;
}

/* responsive design*/

@media screen and (max-width: 1200px) {

   .container{   
        display: flex;
        flex-flow: row wrap;
   }
}

@media screen and (max-width: 950px) {

    .container{   
         width 75%;
         display: flex;
         flex-flow: column wrap;
    }
 }

